# KiComp

./: README.md  kicomp.py  pyproject.toml
kicomp/: __init__.py  __main__.py  cli.py  jlcpcb.py  library.py  project.py  renderer.py  tui.py
