[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "kicomp"
version = "0.1.0"
description = "TUI for managing KiCad components from JLCPCB"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "JLC2KiCadLib",
]
authors = [
    { name = "Rein Bentdal" },
]

[project.scripts]
kicomp = "kicomp:main"
